--- a/index.html
+++ b/index.html
@@ -16,5 +16,14 @@
         alt="test"
       />
     </div>
+    <div class="container">
+      <a href="#!">Item 1</a>
+      <a href="#!">Item 2</a>
+      <a href="#!">Item 3</a>
+      <img
+        src="https://fullstack.edu.vn/static/media/f8-icon.18cd71cfcfa33566a22b.png"
+        alt="test"
+      />
+    </div>
   </body>
 </html>
