--- a/index.html
+++ b/index.html
@@ -25,5 +25,14 @@
         alt="test"
       />
     </div>
+    <div class="container">
+      <a href="#!">Item 7</a>
+      <a href="#!">Item 8</a>
+      <a href="#!">Item 9</a>
+      <img
+        src="https://fullstack.edu.vn/static/media/f8-icon.18cd71cfcfa33566a22b.png"
+        alt="test"
+      />
+    </div>
   </body>
 </html>
