--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
-  <body>
+  <body style="height: 1000px">
     <div class="container">
       <a href="#!">Item 1</a>
       <a href="#!">Item 2</a>
@@ -16,14 +17,39 @@
         alt="test"
       />
     </div>
-    <div class="container">
-      <a href="#!">Item 4</a>
-      <a href="#!">Item 5</a>
-      <a href="#!">Item 6</a>
-      <img
-        src="https://fullstack.edu.vn/static/media/f8-icon.18cd71cfcfa33566a22b.png"
-        alt="test"
-      />
+    <div class="controls">
+      <button class="icon">
+        <svg
+          width="8"
+          height="14"
+          viewBox="0 0 8 14"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M7 1L1 7L7 13"
+            stroke="currentcolor"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          />
+        </svg>
+      </button>
+      <button class="icon">
+        <svg
+          width="8"
+          height="14"
+          viewBox="0 0 8 14"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M1 1L7 7L1 13"
+            stroke="currentcolor"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          />
+        </svg>
+      </button>
     </div>
   </body>
 </html>
